# cv-utils

cv-chatbot/: app.py  logger_setup.py  main.py  query_embeddings_node.py
cv-crewai-chat/: README.md  embeddings_output.csv  logger_setup.py  main.py  requirements.txt
cv-langgraph/: Dockerfile  cohere_rerank_node.py  generate_question_node.py  logger_setup.py  main.py  parse_input_node.py  requirements.txt  schema.py
cv-langgraph-campaign/: .dockerignore  .gitignore  docker-compose.yml  filter_candidates_node.py  generate_email_node.py  generate_response_node.py  pyproject.toml  router_chatbot_node.py
cv-langgraph-campaign/frontend/: package-lock.json
cv-langgraph-campaign/frontend/src/app/: layout.tsx
cv-langgraph-campaign/frontend/src/app/campaign/: page.tsx
cv-langgraph-campaign/frontend/src/components/: Header.tsx
cv-langgraph-campaign/frontend/src/components/ui/: button.tsx  input.tsx
cv-langgraph-campaign/frontend/src/hooks/: useCampaign.ts
cv-langgraph-campaign/frontend/src/lib/: utils.ts
cv-langgraph-chat/: .gitignore  Dockerfile  Git-LangGraph.py  coher_ranking_node.py  final_response_node.py  intent_decision_node.py  prompt.py  pyproject.toml  schema.py  state_types.py
cv-langgraph-chat/.github/workflows/: main_ops-cv-chatbot.yml
cv-parse/: .dockerignore  .gitignore  Dockerfile  README.md  logger_setup.py  main.py  pyproject.toml  requirements.txt  task_output_resume.json
cv-parse/cv_parse_runnables/resume_parser/: additional_logic.py  prompt_template.py  resume_parse_api.py  resume_parse_utils.py  save_pdfs_to_blob.py  seperate_json_each_resume.py  store_output.py  summarize_campaign.py  summarize_jsons.py
cv-parse/cv_parse_runnables/separate_jsons/: .json
cv-parse/cv_parse_runnables/summaries/: .json.txt
cv-parse/cv_parse_runnables/summaries_campaign/: .json.txt
cv-parse/cv_summarise_crews/: main.py
cv-parse/cv_summarise_crews/crews/resume_summarize_crew/: resume_summarize_crew.py
cv-parse/cv_summarise_crews/crews/resume_summarize_crew/config/: agents.yaml  summary_templates  tasks.yaml
cv-parse/cv_summarise_crews/db/0a5517d1-602b-4095-bc0b-a26aac2ec64b/: index_metadata.pickle
cv-parse/cv_summarise_crews/utils/: calculate_openai_cost.py  json_rag_search.py  save_summary_to_blob.py
cv-pdfs/: Ajay Kumar Goud R_Power_BI_Developer.docx  Ayyappa Reddy_Azure_Data_Engineer.docx  Balamurugan Pichai_Prinicipal_Full_Stack_Developer_Java.docx  Chandradeep Deshbhratar_Technical_Lead_Azure_Data.docx  Dinesh Sarvanan_Power_BI_Developer.docx  Gattu Navaneeth Rao_Azure_Data_Engineer.docx  Manikanta_Golla_Senior_Python_Developer.docx  Meghana Ravula_Android_Framework_Developer.docx  Mohammed Zuber Mohiuddin_Technical_Lead_Azure_Data.docx
(+32 files in other folders)
