[project]
name = "cv-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.15.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.4.9",
    "langgraph-supervisor>=0.0.27",
    "pyodbc>=5.2.0",
    "redis>=6.2.0",
]
