[project]
name = "cv_chatbot"
version = "0.1.0"
description = "cv_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0",
    "pylint>=3.3.7",
    "azure-storage-blob>=12.25.0",
    "azure-identity>=1.22.0",
    "langtrace-python-sdk>=3.8.18",
    "agentops>=0.4.14",
    "duckdb>=1.3.0",
    "pymupdf>=1.26.1",
    "langgraph>=0.5.0",
    "pyodbc>=5.2.0",
    "ipykernel>=6.29.5",
]

[project.scripts]
cv_chatbot = "cv_chatbot.main:run"
run_crew = "cv_chatbot.main:run"
train = "cv_chatbot.main:train"
replay = "cv_chatbot.main:replay"
test = "cv_chatbot.main:test"
run_cli = "cv_chatbot.main:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
